// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`asset > applicability 1`] = `
{
  "children": [
    {
      "path": [
        "asset",
      ],
      "value": {
        "children": [
          {
            "path": [
              "values",
            ],
            "value": {
              "override": true,
              "parent": [Circular],
              "type": "multi-node",
              "values": [
                {
                  "expression": "{{foo}}",
                  "parent": [Circular],
                  "type": "applicability",
                  "value": {
                    "parent": [Circular],
                    "type": "value",
                    "value": {
                      "value": "foo",
                    },
                  },
                },
                {
                  "parent": [Circular],
                  "type": "value",
                  "value": {
                    "value": "bar",
                  },
                },
              ],
            },
          },
        ],
        "parent": [Circular],
        "type": "asset",
        "value": undefined,
      },
    },
  ],
  "type": "value",
  "value": undefined,
}
`;

exports[`asset > multi-node 1`] = `
{
  "children": [
    {
      "path": [
        "asset",
      ],
      "value": {
        "children": [
          {
            "path": [
              "values",
            ],
            "value": {
              "override": true,
              "parent": [Circular],
              "type": "multi-node",
              "values": [
                {
                  "children": [
                    {
                      "path": [
                        "asset",
                      ],
                      "value": {
                        "parent": [Circular],
                        "type": "asset",
                        "value": {
                          "id": "value-1",
                          "type": "text",
                          "value": "First value in the collection",
                        },
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "value",
                  "value": undefined,
                },
              ],
            },
          },
        ],
        "parent": [Circular],
        "type": "asset",
        "value": {
          "id": "foo",
          "type": "collection",
        },
      },
    },
  ],
  "type": "value",
  "value": undefined,
}
`;

exports[`asset > object 1`] = `
{
  "children": [
    {
      "path": [
        "asset",
      ],
      "value": {
        "parent": [Circular],
        "type": "asset",
        "value": {
          "type": "bar",
        },
      },
    },
  ],
  "type": "value",
  "value": undefined,
}
`;

exports[`asset > switch 1`] = `
{
  "children": [
    {
      "path": [
        "title",
        "asset",
      ],
      "value": {
        "parent": [Circular],
        "type": "asset",
        "value": {
          "id": "test",
          "type": "text",
          "value": "test-text.",
        },
      },
    },
  ],
  "type": "value",
  "value": {
    "id": "toughView",
    "type": "view",
  },
}
`;

exports[`asset > template 1`] = `
{
  "children": [
    {
      "path": [
        "asset",
      ],
      "value": {
        "children": [
          {
            "path": [
              "values",
            ],
            "value": {
              "override": false,
              "parent": [Circular],
              "type": "multi-node",
              "values": [
                {
                  "parent": [Circular],
                  "type": "value",
                  "value": {
                    "value": "{{foo.bar.0}}",
                  },
                },
                {
                  "parent": [Circular],
                  "type": "value",
                  "value": {
                    "value": "{{foo.bar.1}}",
                  },
                },
                {
                  "parent": [Circular],
                  "type": "value",
                  "value": {
                    "value": "{{foo.bar.2}}",
                  },
                },
              ],
            },
          },
        ],
        "parent": [Circular],
        "type": "asset",
        "value": {
          "id": "foo",
          "type": "collection",
        },
      },
    },
  ],
  "type": "value",
  "value": undefined,
}
`;
